// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snap render Avatar -- props circle 1`] = `
<view
  class="at-avatar--normal at-avatar--circle at-avatar"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap render Avatar -- props image 1`] = `
<view
  class="at-avatar--normal at-avatar"
>
  <image
    class="at-avatar__img"
    src="https://jdc.jd.com/img/100"
  />
</view>
`;

exports[`Avatar Snap render Avatar -- props size(large)  1`] = `
<view
  class="at-avatar--large at-avatar"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap render Avatar -- props size(normal)  1`] = `
<view
  class="at-avatar--normal at-avatar"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap render Avatar -- props size(small)  1`] = `
<view
  class="at-avatar--small at-avatar"
>
  <text
    class="at-avatar__text"
  />
</view>
`;

exports[`Avatar Snap render Avatar -- props text 1`] = `
<view
  class="at-avatar--normal at-avatar"
>
  <text
    class="at-avatar__text"
  >
    凹
  </text>
</view>
`;
